fixup! feat(responsive): add mobile breakpoints for features, gallery, testimonials, and subscribe sections

--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
     <ul class="nav-items">
       <li><a href="#hero" class="nav-link">Головна</a></li>
       <li><a href="#features" class="nav-link">Інструменти</a></li>
-      <li><a href="#gallery" class="nav-link">Галерея</a></li>
-      <li><a href="#testimonials" class="nav-link">Відгуки</a></li>
-      <li><a href="#subscribe" class="nav-link">Підписка</a></li>
       <li><a href="#contact" class="nav-link">Контакти</a></li>
     </ul>
   </nav>
@@ -44,9 +41,6 @@
     <ul>
       <li><a href="#hero" class="nav-link">Головна</a></li>
       <li><a href="#features" class="nav-link">Інструменти</a></li>
-      <li><a href="#gallery" class="nav-link">Галерея</a></li>
-      <li><a href="#testimonials" class="nav-link">Відгуки</a></li>
-      <li><a href="#subscribe" class="nav-link">Підписка</a></li>
       <li><a href="#contact" class="nav-link">Контакти</a></li>
     </ul>
   </nav>
@@ -85,71 +79,34 @@
       <!-- Features Section -->
       <section id="features" class="admin-features reveal delay-3">
         <div class="feature neu">
-          <img src="images/icon-expenses.svg" alt="" class="feature-icon">
+          <img src="images/icon-expenses.svg" alt="Форма витрат" class="feature-icon">
           <h3>Форма витрат</h3>
           <p>Швидко фіксуйте всі витрати та отримуйте звіти.</p>
         </div>
         <div class="feature neu">
-          <img src="images/icon-calendar.svg" alt="" class="feature-icon">
+          <img src="images/icon-calendar.svg" alt="Календар записів" class="feature-icon">
           <h3>Календар записів</h3>
           <p>Плануйте зустрічі та заходи в одному місці.</p>
         </div>
         <div class="feature neu">
-          <img src="images/icon-reports.svg" alt="" class="feature-icon">
+          <img src="images/icon-reports.svg" alt="Звіти в реальному часі" class="feature-icon">
           <h3>Звіти в реальному часі</h3>
           <p>Слідкуйте за показниками у будь-який момент.</p>
         </div>
-      </section>
-
-      <!-- Gallery Section -->
-      <section id="gallery" class="gallery reveal delay-4">
-        <div class="grid">
-          <img src="images/gallery1.jpg" alt="" class="neu">
-          <img src="images/gallery2.jpg" alt="" class="neu">
-          <img src="images/gallery3.jpg" alt="" class="neu">
-          <img src="images/gallery4.jpg" alt="" class="neu">
+        <div class="feature neu">
+          <img src="images/icon-map.svg" alt="Карта клієнтів" class="feature-icon">
+          <h3>Карта клієнтів</h3>
+          <p>Відстежуйте локації та маршрути ваших клієнтів.</p>
         </div>
       </section>
 
-      <!-- Testimonials Section -->
-      <section id="testimonials" class="testimonials reveal delay-5">
-        <div class="testi-wrapper">
-          <blockquote class="neu">
-            <p>“Sirko Club зробив нашу роботу вабільнішою і швидшою!”</p>
-            <footer>— Олена, адміністратор</footer>
-          </blockquote>
-          <blockquote class="neu">
-            <p>“Найкращі інструменти для догляду за тваринами.”</p>
-            <footer>— Іван, ветеринар</footer>
-          </blockquote>
-          <blockquote class="neu">
-            <p>“Простота та зрозумілість інтерфейсу!”</p>
-            <footer>— Марія, технічний працівник</footer>
-          </blockquote>
-        </div>
-      </section>
-
-      <!-- Subscribe Section -->
-      <section id="subscribe" class="subscribe reveal delay-6">
-        <div class="neu subscribe-box">
-          <h3>Будьте в курсі</h3>
-          <p>Отримуйте оновлення та новини Sirko Club</p>
-          <form>
-            <input type="email" placeholder="Ваш e-mail" required>
-            <button type="submit" class="btn neu">Підписатися</button>
-          </form>
-        </div>
-      </section>
     </div><!-- /.container -->
 
     <!-- Footer -->
-    <footer class="footer neu reveal delay-7">
+    <footer class="footer neu reveal delay-4">
       <ul class="social-list">
         <li><a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
           <svg width="32" height="32" viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20" rx="5" fill="var(--accent)"/><circle cx="12" cy="12" r="5" stroke="var(--text-color)" stroke-width="2"/><circle cx="17" cy="7" r="1.5" fill="var(--text-color)"/></svg>
-        </a></li>
-        <li><a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
-          <svg width="32" height="32" viewBox="0 0 24 24"><path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" fill="var(--text-color)"/></svg>
         </a></li>
         <li><a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
           <svg width="32" height="32" viewBox="0 0 24 24"><path d="M4 12l16-6-6 16L10 14l-4-2z" fill="var(--text-color)"/></svg>
