fixup! fixup! feat(responsive): add mobile breakpoints for features, gallery, testimonials, and subscribe sections

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <!-- Hero Section -->
-      <header id="hero" class="hero neu reveal delay-2">
+      <header id="hero" class="hero neu reveal delay-1">
         <div class="hero__image neu">
           <img
             id="site-logo"
@@ -77,36 +77,38 @@
       </header>
 
       <!-- Features Section -->
-      <section id="features" class="admin-features reveal delay-3">
-        <div class="feature neu">
+      <section id="features" class="admin-features">
+        <div class="feature neu reveal-left delay-2">
           <img src="images/icon-expenses.svg" alt="Форма витрат" class="feature-icon">
           <h3>Форма витрат</h3>
           <p>Швидко фіксуйте всі витрати та отримуйте звіти.</p>
         </div>
-        <div class="feature neu">
+        <div class="feature neu reveal-right delay-3">
           <img src="images/icon-calendar.svg" alt="Календар записів" class="feature-icon">
           <h3>Календар записів</h3>
           <p>Плануйте зустрічі та заходи в одному місці.</p>
         </div>
-        <div class="feature neu">
+        <div class="feature neu reveal-left delay-4">
           <img src="images/icon-reports.svg" alt="Звіти в реальному часі" class="feature-icon">
           <h3>Звіти в реальному часі</h3>
           <p>Слідкуйте за показниками у будь-який момент.</p>
         </div>
-        <div class="feature neu">
+        <div class="feature neu reveal-right delay-5">
           <img src="images/icon-map.svg" alt="Карта клієнтів" class="feature-icon">
           <h3>Карта клієнтів</h3>
           <p>Відстежуйте локації та маршрути ваших клієнтів.</p>
         </div>
       </section>
-
     </div><!-- /.container -->
 
     <!-- Footer -->
-    <footer class="footer neu reveal delay-4">
+    <footer class="footer neu reveal delay-6">
       <ul class="social-list">
         <li><a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
           <svg width="32" height="32" viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20" rx="5" fill="var(--accent)"/><circle cx="12" cy="12" r="5" stroke="var(--text-color)" stroke-width="2"/><circle cx="17" cy="7" r="1.5" fill="var(--text-color)"/></svg>
+        </a></li>
+        <li><a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
+          <svg width="32" height="32" viewBox="0 0 24 24"><path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" fill="var(--text-color)"/></svg>
         </a></li>
         <li><a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
           <svg width="32" height="32" viewBox="0 0 24 24"><path d="M4 12l16-6-6 16L10 14l-4-2z" fill="var(--text-color)"/></svg>
