Refactor CSS variables, nav layout, and toggle logic; streamline reveal animations
- Simplify variable set: remove per-axis shadow vars in favor of unified --shadow and --transition
- Inline font declarations (Inter, Playfair Display); drop redundant font CSS vars
- Add top padding for fixed header; make <header> sticky with full-width .desktop-nav
- Consolidate logo, nav links, burger, and theme toggle under .desktop-nav, .burger, .dark-toggle
- Show burger & theme toggle only on mobile; refactor .mobile-nav for sliding panel behavior
- Replace dual reveal-left/right selects with unified IntersectionObserver watching .reveal-left, .reveal-right, and footer
- Update hero to use .reveal-left and responsive typography; clean up Pawprints animation CSS
- Tidy reset/base rules and remove unused .container/.page-wrapper wrappers

--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#EADBC8">
   <title>Sirko Club — Собачий адмін</title>
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&amp;family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-  <!-- App CSS -->
   <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -33,10 +28,13 @@
     </ul>
   </nav>
 
-  <!-- Mobile Burger -->
+  <!-- Mobile Burger & Theme Toggle -->
   <button id="burger-btn" class="burger neu" aria-label="Відкрити меню">
     <span></span><span></span><span></span>
   </button>
+  <button id="theme-toggle" class="dark-toggle neu" aria-label="Переключити тему">🌙</button>
+
+  <!-- Mobile Navigation -->
   <nav id="mobile-nav" class="mobile-nav neu">
     <ul>
       <li><a href="#hero" class="nav-link">Головна</a></li>
@@ -44,9 +42,6 @@
       <li><a href="#contact" class="nav-link">Контакти</a></li>
     </ul>
   </nav>
-
-  <!-- Theme Toggle -->
-  <button id="theme-toggle" class="dark-toggle neu" aria-label="Переключити тему">🌙</button>
 
   <div class="page-wrapper">
     <div class="container">
@@ -59,7 +54,7 @@
       </div>
 
       <!-- Hero Section -->
-      <header id="hero" class="hero neu reveal delay-1">
+      <header id="hero" class="hero neu reveal-left delay-1">
         <div class="hero__image neu">
           <img
             id="site-logo"
@@ -102,28 +97,17 @@
     </div><!-- /.container -->
 
     <!-- Footer -->
-    <footer class="footer neu reveal delay-6">
+    <footer id="contact" class="footer neu reveal delay-6">
       <ul class="social-list">
-        <li><a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
-          <svg width="32" height="32" viewBox="0 0 24 24"><rect x="2" y="2" width="20" height="20" rx="5" fill="var(--accent)"/><circle cx="12" cy="12" r="5" stroke="var(--text-color)" stroke-width="2"/><circle cx="17" cy="7" r="1.5" fill="var(--text-color)"/></svg>
-        </a></li>
-        <li><a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
-          <svg width="32" height="32" viewBox="0 0 24 24"><path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" fill="var(--text-color)"/></svg>
-        </a></li>
-        <li><a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
-          <svg width="32" height="32" viewBox="0 0 24 24"><path d="M4 12l16-6-6 16L10 14l-4-2z" fill="var(--text-color)"/></svg>
-        </a></li>
-        <li><a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
-          <svg width="32" height="32" viewBox="0 0 24 24"><rect x="2" y="5" width="20" height="14" rx="2" fill="var(--accent)"/><polygon points="10,8 16,12 10,16" fill="var(--text-color)"/></svg>
-        </a></li>
+        <li><a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">…svg…</a></li>
+        <li><a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">…svg…</a></li>
+        <li><a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">…svg…</a></li>
+        <li><a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">…svg…</a></li>
       </ul>
-      <div class="footer-down adaptive-text">
-        <p>© 2025 Sirko Club. Всі права захищено.</p>
-      </div>
+      <p class="footer-down adaptive-text">© 2025 Sirko Club. Всі права захищено.</p>
     </footer>
   </div><!-- /.page-wrapper -->
 
-  <!-- App JS -->
   <script src="js/app.js"></script>
 </body>
 </html>
