--- a/index.html
+++ b/index.html
@@ -90,41 +90,37 @@
       </section>
     </div>
 
-    <!-- FOOTER -->
+    <!-- FOOTER (якісні SVG іконки) -->
     <footer id="contact" class="footer neu reveal delay-6">
       <ul class="social-list">
         <li>
           <a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
-            <!-- Покращена crisp SVG іконка Instagram -->
-            <svg width="32" height="32" viewBox="0 0 24 24">
-              <rect x="2" y="2" width="20" height="20" rx="5" fill="var(--accent)" />
-              <circle cx="12" cy="12" r="5" stroke="var(--text-color)" stroke-width="2" fill="none"/>
-              <circle cx="17" cy="7" r="1.5" fill="var(--text-color)" />
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <rect x="3" y="3" width="18" height="18" rx="5" fill="var(--accent)" stroke="none"/>
+              <circle cx="12" cy="12" r="4" stroke="var(--text-color)" stroke-width="1.5" fill="none"/>
+              <circle cx="17.5" cy="6.5" r="1" fill="var(--text-color)"/>
             </svg>
           </a>
         </li>
         <li>
           <a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
-            <!-- Crisp SVG TikTok -->
-            <svg width="32" height="32" viewBox="0 0 24 24">
-              <path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" fill="var(--text-color)" />
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z"/>
             </svg>
           </a>
         </li>
         <li>
           <a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
-            <!-- Crisp SVG Telegram -->
-            <svg width="32" height="32" viewBox="0 0 24 24">
-              <path d="M4 12l16-6-6 16L10 14l-4-2z" fill="var(--text-color)" />
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M4 12l16-6-6 16L10 14l-4-2z"/>
             </svg>
           </a>
         </li>
         <li>
           <a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
-            <!-- Crisp SVG YouTube -->
-            <svg width="32" height="32" viewBox="0 0 24 24">
-              <rect x="2" y="5" width="20" height="14" rx="2" fill="var(--accent)" />
-              <polygon points="10,8 16,12 10,16" fill="var(--text-color)" />
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <rect x="3" y="5" width="18" height="14" rx="4" fill="var(--accent)" stroke="none"/>
+              <polygon points="10,9 16,12 10,15" fill="var(--text-color)"/>
             </svg>
           </a>
         </li>
