--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <meta name="theme-color" content="#EADBC8" />
   <title>Sirko Club — Собачий адмін</title>
 
-    <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@700&display=swap"
+    rel="stylesheet"
+  />
 
   <!-- App CSS -->
   <link rel="stylesheet" href="css/app.css" />
@@ -26,12 +29,12 @@
         data-dark="images/logo-dark.svg"
         alt="Sirko Club Logo"
       />
-      <span class="nav-logo-text">Sirko Club</span>
+      <span class="nav-logo-text adaptive-text">Sirko Club</span>
     </div>
     <ul class="nav-items">
-      <li><a href="#hero" class="nav-link">Головна</a></li>
-      <li><a href="#features" class="nav-link">Інструменти</a></li>
-      <li><a href="#contact" class="nav-link">Контакти</a></li>
+      <li><a href="#hero" class="nav-link adaptive-text">Головна</a></li>
+      <li><a href="#features" class="nav-link adaptive-text">Інструменти</a></li>
+      <li><a href="#contact" class="nav-link adaptive-text">Контакти</a></li>
     </ul>
   </nav>
 
@@ -44,9 +47,9 @@
   <!-- MOBILE NAV -->
   <nav id="mobile-nav" class="mobile-nav neu">
     <ul>
-      <li><a href="#hero" class="nav-link">Головна</a></li>
-      <li><a href="#features" class="nav-link">Інструменти</a></li>
-      <li><a href="#contact" class="nav-link">Контакти</a></li>
+      <li><a href="#hero" class="nav-link adaptive-text">Головна</a></li>
+      <li><a href="#features" class="nav-link adaptive-text">Інструменти</a></li>
+      <li><a href="#contact" class="nav-link adaptive-text">Контакти</a></li>
     </ul>
   </nav>
 
@@ -76,23 +79,23 @@
       <section id="features" class="admin-features">
         <div class="feature neu reveal-left delay-2">
           <img src="images/icon-expenses.svg" alt="Форма витрат" class="feature-icon" />
-          <h3>Форма витрат</h3>
-          <p>Швидко фіксуйте всі витрати та отримуйте звіти.</p>
+          <h3 class="adaptive-text">Форма витрат</h3>
+          <p class="adaptive-text">Швидко фіксуйте всі витрати та отримуйте звіти.</p>
         </div>
         <div class="feature neu reveal-right delay-3">
           <img src="images/icon-calendar.svg" alt="Календар записів" class="feature-icon" />
-          <h3>Календар записів</h3>
-          <p>Плануйте зустрічі та заходи в одному місці.</p>
+          <h3 class="adaptive-text">Календар записів</h3>
+          <p class="adaptive-text">Плануйте зустрічі та заходи в одному місці.</p>
         </div>
         <div class="feature neu reveal-left delay-4">
           <img src="images/icon-reports.svg" alt="Звіти" class="feature-icon" />
-          <h3>Звіти в реальному часі</h3>
-          <p>Слідкуйте за показниками у будь-який момент.</p>
+          <h3 class="adaptive-text">Звіти в реальному часі</h3>
+          <p class="adaptive-text">Слідкуйте за показниками у будь-який момент.</p>
         </div>
         <div class="feature neu reveal-right delay-5">
           <img src="images/icon-map.svg" alt="Карта клієнтів" class="feature-icon" />
-          <h3>Карта клієнтів</h3>
-          <p>Відстежуйте локації та маршрути ваших клієнтів.</p>
+          <h3 class="adaptive-text">Карта клієнтів</h3>
+          <p class="adaptive-text">Відстежуйте локації та маршрути ваших клієнтів.</p>
         </div>
       </section>
     </div>
@@ -102,8 +105,7 @@
       <ul class="social-list">
         <li>
           <a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
-            <!-- Всі контури залиті currentColor -->
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" color="var(--text-color)">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
               <rect x="3" y="3" width="18" height="18" rx="5" fill="none"/>
               <circle cx="12" cy="12" r="4" fill="none"/>
               <circle cx="17.5" cy="6.5" r="1"/>
@@ -112,21 +114,21 @@
         </li>
         <li>
           <a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" color="var(--text-color)">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
               <path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z"/>
             </svg>
           </a>
         </li>
         <li>
           <a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" color="var(--text-color)">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
               <path d="M4 12l16-6-6 16L10 14l-4-2z"/>
             </svg>
           </a>
         </li>
         <li>
           <a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" color="var(--text-color)">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
               <rect x="3" y="5" width="18" height="14" rx="4" fill="none" stroke="currentColor" stroke-width="1.5"/>
               <polygon points="10,9 16,12 10,15" />
             </svg>
