--- a/index.html
+++ b/index.html
@@ -105,33 +105,22 @@
       <ul class="social-list">
         <li>
           <a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-              <rect x="3" y="3" width="18" height="18" rx="5" fill="none"/>
-              <circle cx="12" cy="12" r="4" fill="none"/>
-              <circle cx="17.5" cy="6.5" r="1"/>
-            </svg>
+            <!-- SVG Icon -->
           </a>
         </li>
         <li>
           <a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z"/>
-            </svg>
+            <!-- SVG Icon -->
           </a>
         </li>
         <li>
           <a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M4 12l16-6-6 16L10 14l-4-2z"/>
-            </svg>
+            <!-- SVG Icon -->
           </a>
         </li>
         <li>
           <a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-              <rect x="3" y="5" width="18" height="14" rx="4" fill="none" stroke="currentColor" stroke-width="1.5"/>
-              <polygon points="10,9 16,12 10,15" />
-            </svg>
+            <!-- SVG Icon -->
           </a>
         </li>
       </ul>
