--- a/index.html
+++ b/index.html
@@ -1,142 +1,61 @@
 <!DOCTYPE html>
-<html lang="uk" data-theme="light">
+<html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#EADBC8" />
-  <title>Sirko Club — Собачий адмін</title>
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Playfair+Display:wght@700&display=swap"
-    rel="stylesheet"
-  />
-
-  <!-- App CSS -->
-  <link rel="stylesheet" href="css/app.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Sirko Club — Адміністрування</title>
+  <link rel="stylesheet" href="css/app.css">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <!-- HEADER -->
-  <nav class="desktop-nav neu">
-    <div class="nav-logo neu">
-      <img
-        id="nav-logo"
-        class="nav-logo-img"
-        src="images/logo-light.svg"
-        data-light="images/logo-light.svg"
-        data-dark="images/logo-dark.svg"
-        alt="Sirko Club Logo"
-      />
-      <span class="nav-logo-text adaptive-text">Sirko Club</span>
-    </div>
-    <ul class="nav-items">
-      <li><a href="#hero" class="nav-link adaptive-text">Головна</a></li>
-      <li><a href="#features" class="nav-link adaptive-text">Інструменти</a></li>
-      <li><a href="#contact" class="nav-link adaptive-text">Контакти</a></li>
-    </ul>
-  </nav>
+  <div class="layout">
+    <!-- SIDEBAR -->
+    <aside class="sidebar">
+      <div class="logo-block">
+        <img src="images/logo-light.png" alt="Sirko Club Logo">
+      </div>
+      <nav class="sidebar-nav">
+        <ul>
+          <li><a href="#">Головна</a></li>
+          <li><a href="#">Записи</a></li>
+          <li><a href="#">Витрати</a></li>
+          <li><a href="#">Звіти</a></li>
+          <li><a href="#">Налаштування</a></li>
+        </ul>
+      </nav>
+    </aside>
 
-  <!-- BURGER & THEME -->
-  <button id="burger-btn" class="burger neu" aria-label="Відкрити меню">
-    <span></span><span></span><span></span>
-  </button>
-  <button id="theme-toggle" class="dark-toggle neu" aria-label="Переключити тему">🌙</button>
-
-  <!-- MOBILE NAV -->
-  <nav id="mobile-nav" class="mobile-nav neu">
-    <ul>
-      <li><a href="#hero" class="nav-link adaptive-text">Головна</a></li>
-      <li><a href="#features" class="nav-link adaptive-text">Інструменти</a></li>
-      <li><a href="#contact" class="nav-link adaptive-text">Контакти</a></li>
-    </ul>
-  </nav>
-
-  <div class="page-wrapper">
-    <div class="container">
-      <!-- HERO -->
-      <header id="hero" class="hero neu reveal-left delay-1">
-        <div class="hero__image neu">
-          <img
-            id="site-logo"
-            class="logo-sketch"
-            src="images/logo-light.svg"
-            data-light="images/logo-light.svg"
-            data-dark="images/logo-dark.svg"
-            alt="Sirko Club Logo"
-          />
-        </div>
-        <div class="hero__content">
-          <h1 class="hero__title adaptive-text">Sirko Club — Собачий адмін</h1>
-          <p class="hero__text adaptive-text">
-            Усі інструменти для персоналу та адміністраторів в одному місці.
-          </p>
+    <!-- MAIN CONTENT -->
+    <main class="main">
+      <!-- HEADER -->
+      <header class="main-header">
+        <h1>Адміністрування</h1>
+        <div class="header-meta">
+          <span>Сьогоднішніх записів: <strong id="today-bookings">–</strong></span>
+          <div class="header-buttons">
+            <button id="btn-expense-form">Форма витрат</button>
+            <button id="btn-reports">Звіти</button>
+            <button id="btn-client-map">Карта клієнтів</button>
+          </div>
         </div>
       </header>
 
-      <!-- FEATURES -->
-      <section id="features" class="admin-features">
-        <div class="feature neu reveal-left delay-2">
-          <img src="images/icon-expenses.svg" alt="Форма витрат" class="feature-icon" />
-          <h3 class="adaptive-text">Форма витрат</h3>
-          <p class="adaptive-text">Швидко фіксуйте всі витрати та отримуйте звіти.</p>
-        </div>
-        <div class="feature neu reveal-right delay-3">
-          <img src="images/icon-calendar.svg" alt="Календар записів" class="feature-icon" />
-          <h3 class="adaptive-text">Календар записів</h3>
-          <p class="adaptive-text">Плануйте зустрічі та заходи в одному місці.</p>
-        </div>
-        <div class="feature neu reveal-left delay-4">
-          <img src="images/icon-reports.svg" alt="Звіти" class="feature-icon" />
-          <h3 class="adaptive-text">Звіти в реальному часі</h3>
-          <p class="adaptive-text">Слідкуйте за показниками у будь-який момент.</p>
-        </div>
-        <div class="feature neu reveal-right delay-5">
-          <img src="images/icon-map.svg" alt="Карта клієнтів" class="feature-icon" />
-          <h3 class="adaptive-text">Карта клієнтів</h3>
-          <p class="adaptive-text">Відстежуйте локації та маршрути ваших клієнтів.</p>
-        </div>
+      <!-- FORMS & SECTIONS -->
+      <section id="expense-form" class="section hidden">
+        <h2>Форма витрат</h2>
+        <!-- Тут ваша форма, дані відправляються в Google Sheets -->
       </section>
-    </div>
 
-    <!-- FOOTER -->
-    <footer id="contact" class="footer neu reveal delay-6">
-      <ul class="social-list">
-        <li>
-          <a href="https://instagram.com" target="_blank" class="social-link neu" aria-label="Instagram">
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <rect x="3" y="3" width="18" height="18" rx="5" />
-              <circle cx="12" cy="12" r="4" />
-              <circle cx="17.5" cy="6.5" r="1" />
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="https://tiktok.com" target="_blank" class="social-link neu" aria-label="TikTok">
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <path d="M9 3v12.5a3.5 3.5 0 1 0 3.5-3.5V8h3A5.5 5.5 0 0 1 9 2.5V3z" />
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="https://telegram.org" target="_blank" class="social-link neu" aria-label="Telegram">
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <path d="M4 12l16-6-6 16L10 14l-4-2z" />
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="https://youtube.com" target="_blank" class="social-link neu" aria-label="YouTube">
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <rect x="3" y="5" width="18" height="14" rx="4" />
-              <polygon points="10,9 16,12 10,15" />
-            </svg>
-          </a>
-        </li>
-      </ul>
-      <p class="footer-down adaptive-text">© 2025 Sirko Club. Всі права захищено.</p>
-    </footer>
+      <section id="reports" class="section hidden">
+        <h2>Звіти</h2>
+        <!-- Тут графіки / таблиці зі звітами -->
+      </section>
+
+      <section id="client-map" class="section hidden">
+        <h2>Карта клієнтів</h2>
+        <!-- Тут інтеграція з Google Maps API / вашою картою -->
+      </section>
+    </main>
   </div>
 
   <script src="js/app.js"></script>
