Refactor theme variables, layout, typography and section toggles
- Introduce semantic CSS variables for background, cards, logo colors and radii
- Split VARIABLES/RESET blocks; use Open Sans for body and Playfair Display for headings
- Restructure `.layout`, `.sidebar` and `.main` flex settings; tweak padding, gaps and responsive breakpoints
- Style sidebar nav links with new brown palette and smooth hover transitions
- Add utility `.hidden` class and refine `.section` cards (shadows, padding, margins)
- Update `index.html` to load Google Fonts and clean up section markup/comments
- Simplify JS: section show/hide logic mapping buttons to section IDs; placeholder for Calendar API

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Sirko Club — Адміністрування</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
   <link rel="manifest" href="manifest.json">
 </head>
@@ -40,20 +42,20 @@
         </div>
       </header>
 
-      <!-- FORMS & SECTIONS -->
+      <!-- SECTIONS -->
       <section id="expense-form" class="section hidden">
         <h2>Форма витрат</h2>
-        <!-- Тут ваша форма, дані відправляються в Google Sheets -->
+        <!-- інтеграція Google Sheets API -->
       </section>
 
       <section id="reports" class="section hidden">
         <h2>Звіти</h2>
-        <!-- Тут графіки / таблиці зі звітами -->
+        <!-- графіки / таблиці звітів -->
       </section>
 
       <section id="client-map" class="section hidden">
         <h2>Карта клієнтів</h2>
-        <!-- Тут інтеграція з Google Maps API / вашою картою -->
+        <!-- інтеграція Google Maps API -->
       </section>
     </main>
   </div>
