Add responsive mobile sidebar with burger toggle
- Refactor CSS variables comments for clarity
- Add `.sidebar` transition and hide it off-canvas by default on small screens
- Introduce `.burger` icon styling and show it only on mobile
- Update index.html: assign `id="sidebar"` and insert burger button in header
- Enhance `.main-header` layout for better alignment
- Implement JS handler to toggle `.sidebar.active` when burger clicked
- Clean up section-toggle logic with `addEventListener`

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="layout">
     <!-- SIDEBAR -->
-    <aside class="sidebar">
+    <aside class="sidebar" id="sidebar">
       <div class="logo-block">
         <img src="images/logo-light.png" alt="Sirko Club Logo">
       </div>
@@ -31,6 +31,7 @@
     <main class="main">
       <!-- HEADER -->
       <header class="main-header">
+        <button class="burger" id="burger-btn" aria-label="Меню">&#9776;</button>
         <h1>Адміністрування</h1>
         <div class="header-meta">
           <span>Сьогоднішніх записів: <strong id="today-bookings">–</strong></span>
