fixup! Add responsive mobile sidebar with burger toggle

--- a/admin/index.html
+++ b/admin/index.html
@@ -61,6 +61,9 @@
     </main>
   </div>
 
+  <!-- Мобільна анімована лапка -->
+  <img src="images/paw-print.svg" class="paw-print" alt="Песик лапка">
+
   <script src="js/app.js"></script>
 </body>
 </html>
