--- a/admin/index.html
+++ b/admin/index.html
@@ -46,23 +46,23 @@
       <!-- SECTIONS -->
       <section id="expense-form" class="section hidden">
         <h2>Форма витрат</h2>
-        <!-- інтеграція Google Sheets API -->
+        <!-- Інтеграція Google Sheets API тут -->
       </section>
 
       <section id="reports" class="section hidden">
         <h2>Звіти</h2>
-        <!-- графіки / таблиці звітів -->
+        <!-- Графіки / таблиці звітів -->
       </section>
 
       <section id="client-map" class="section hidden">
         <h2>Карта клієнтів</h2>
-        <!-- інтеграція Google Maps API -->
+        <!-- Інтеграція Google Maps API -->
       </section>
     </main>
   </div>
 
-  <!-- Мобільна анімована лапка -->
-  <img src="images/paw-print.svg" class="paw-print" alt="Песик лапка">
+  <!-- Анімована лапка -->
+  <img src="images/paw-print.svg" class="paw-print" alt="Лапка">
 
   <script src="js/app.js"></script>
 </body>
