--- a/admin/index.html
+++ b/admin/index.html
@@ -29,7 +29,6 @@
 
     <!-- MAIN CONTENT -->
     <main class="main">
-      <!-- HEADER -->
       <header class="main-header">
         <button class="burger" id="burger-btn" aria-label="Меню">&#9776;</button>
         <h1>Адміністрування</h1>
@@ -43,7 +42,6 @@
         </div>
       </header>
 
-      <!-- SECTIONS -->
       <section id="expense-form" class="section hidden">
         <h2>Форма витрат</h2>
         <!-- Інтеграція Google Sheets API тут -->
@@ -61,7 +59,7 @@
     </main>
   </div>
 
-  <!-- Анімована лапка -->
+  <!-- Анімована лапка (тепер із темним fill) -->
   <img src="images/paw-print.svg" class="paw-print" alt="Лапка">
 
   <script src="js/app.js"></script>
