fixup! fixup! fixup! fixup! fixup! Add responsive mobile sidebar with burger toggle

--- a/admin/index.html
+++ b/admin/index.html
@@ -29,6 +29,7 @@
 
     <!-- MAIN CONTENT -->
     <main class="main">
+      <!-- HEADER -->
       <header class="main-header">
         <button class="burger" id="burger-btn" aria-label="Меню">&#9776;</button>
         <h1>Адміністрування</h1>
@@ -42,6 +43,7 @@
         </div>
       </header>
 
+      <!-- SECTIONS -->
       <section id="expense-form" class="section hidden">
         <h2>Форма витрат</h2>
         <!-- Інтеграція Google Sheets API тут -->
@@ -59,7 +61,7 @@
     </main>
   </div>
 
-  <!-- Анімована лапка (тепер із темним fill) -->
+  <!-- Анімована лапка -->
   <img src="images/paw-print.svg" class="paw-print" alt="Лапка">
 
   <script src="js/app.js"></script>
