fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Add responsive mobile sidebar with burger toggle

--- a/index.html
+++ b/index.html
@@ -46,23 +46,19 @@
       <!-- SECTIONS -->
       <section id="expense-form" class="section hidden">
         <h2>Форма витрат</h2>
-        <!-- Інтеграція Google Sheets API тут -->
       </section>
-
       <section id="reports" class="section hidden">
         <h2>Звіти</h2>
-        <!-- Графіки / таблиці звітів -->
       </section>
-
       <section id="client-map" class="section hidden">
         <h2>Карта клієнтів</h2>
-        <!-- Інтеграція Google Maps API -->
       </section>
     </main>
   </div>
 
-  <!-- Анімована лапка -->
-  <img src="images/paw-print.svg" class="paw-print" alt="Лапка">
+  <!-- Анімовані лапки -->
+  <img src="images/paw-print.svg" class="paw paw1" alt="Лапка 1">
+  <img src="images/paw-print.svg" class="paw paw2" alt="Лапка 2">
 
   <script src="js/app.js"></script>
 </body>
