--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Sirko Club — Адміністрування</title>
-  <!-- Шрифти -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
   <link rel="manifest" href="manifest.json">
@@ -56,7 +56,7 @@
     </main>
   </div>
 
-  <!-- Дві анімовані лапки -->
+  <!-- Paw footprints -->
   <img src="images/paw-print.svg" class="paw paw1" alt="Лапка 1">
   <img src="images/paw-print.svg" class="paw paw2" alt="Лапка 2">
 
