--- a/index.html
+++ b/index.html
@@ -56,9 +56,18 @@
     </main>
   </div>
 
-  <!-- Paw footprints -->
-  <img src="images/paw-print.svg" class="paw paw1" alt="Лапка 1">
-  <img src="images/paw-print.svg" class="paw paw2" alt="Лапка 2">
+  <!-- ADMIN FOOTER -->
+  <footer class="admin-footer">
+    <div class="social">
+      <a href="#"><img src="images/telegram.svg" alt="Telegram"></a>
+      <a href="#"><img src="images/instagram.svg" alt="Instagram"></a>
+      <a href="#"><img src="images/youtube.svg" alt="YouTube"></a>
+      <a href="#"><img src="images/tiktok.svg" alt="TikTok"></a>
+    </div>
+    <!-- decorative paw prints -->
+    <img src="images/PubPrintSVG.svg" class="paw paw1" alt="">
+    <img src="images/PubPrintSVG.svg" class="paw paw2" alt="">
+  </footer>
 
   <script src="js/app.js"></script>
 </body>
