fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Add responsive mobile sidebar with burger toggle

--- a/index.html
+++ b/index.html
@@ -56,17 +56,20 @@
     </main>
   </div>
 
+  <!-- ZONE FOR PAW PRINTS -->
+  <div class="paw-zone">
+    <img src="images/paw-print.svg" class="paw paw1" alt="Лапка 1">
+    <img src="images/paw-print.svg" class="paw paw2" alt="Лапка 2">
+  </div>
+
   <!-- ADMIN FOOTER -->
   <footer class="admin-footer">
     <div class="social">
-      <a href="#"><img src="images/telegram.svg" alt="Telegram"></a>
-      <a href="#"><img src="images/instagram.svg" alt="Instagram"></a>
-      <a href="#"><img src="images/youtube.svg" alt="YouTube"></a>
-      <a href="#"><img src="images/tiktok.svg" alt="TikTok"></a>
+      <a href="https://t.me/yourchannel" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/telegram.svg" alt="Telegram"></a>
+      <a href="https://instagram.com/yourprofile" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/instagram.svg" alt="Instagram"></a>
+      <a href="https://youtube.com/yourchannel" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/youtube.svg" alt="YouTube"></a>
+      <a href="https://tiktok.com/@yourprofile" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/tiktok.svg" alt="TikTok"></a>
     </div>
-    <!-- decorative paw prints -->
-    <img src="images/PubPrintSVG.svg" class="paw paw1" alt="">
-    <img src="images/PubPrintSVG.svg" class="paw paw2" alt="">
   </footer>
 
   <script src="js/app.js"></script>
