--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Sirko Club — Адміністрування</title>
-  <!-- Шрифти та іконки -->
+  <!-- Google Fonts + Material Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/app.css">
@@ -73,7 +73,7 @@
     </main>
   </div>
 
-  <!-- Зона слідів лапок -->
+  <!-- Зона хаотичних слідів лапок -->
   <div class="paw-zone">
     <img src="images/paw-print.svg" class="paw paw1" alt="">
     <img src="images/paw-print.svg" class="paw paw2" alt="">
